2002-01-06  Sergei Barbarash  <sgt@fep.ru>

	* Release 0.2
	* added valid LJ login, not much is used yet
	* added fastserver support
	* replaced plaintext password with md5 hash
	* changed the copyright notice :) the second year of development!
	* save the rc file after every settings change
	* if no .wmljrc found, pops up the settings dialog immediately
	* network error notification now works properly

2002-01-05  Sergei Barbarash  <sgt@fep.ru>

	* Release 0.1
	* Initial release