@@ -1,4 +1,4 @@
-$Id: README,v 1.2 2002/01/06 13:45:08 sgt Exp $
+$Id: README,v 1.3 2002/01/08 10:19:36 sgt Exp $
 
 Introduction
 ------------
@@ -58,4 +58,4 @@ Alexey Vyskubov <alexey@pepper.spb.ru> - for writing foodock library
 (http://freshmeat.net/projects/foodock/), which spared me the hassle
 of figuring out how to write a dockapp.
 
-Olya <email pending> - my cat, for purring on my nap while I wrote this
+Olya <email pending> - my cat, for purring on my lap while I wrote this
